feat: add new endpoints
