# app/Infrastructure/Http/Controllers/PuzzleController.php
@@ -4,6 +4,7 @@ namespace App\Infrastructure\Http\Controllers;
 use App\Application\DTOs\PuzzleDTO;
 use App\Application\Traits\ApiResponse;
 use App\Application\UseCase\Puzzle\CreatePuzzleUseCase;
+use App\Application\UseCase\Puzzle\GetAllPuzzlesUseCase;
 use App\Application\UseCase\Puzzle\GetPuzzleByIdUseCase;
 use App\Application\UseCase\Puzzle\UpdatePuzzleUseCase;
 use App\Infrastructure\Http\Requests\StorePuzzleRequest;
@@ -20,15 +21,39 @@ class PuzzleController extends Controller {
     private CreatePuzzleUseCase $createPuzzleUseCase;
     private GetPuzzleByIdUseCase $getPuzzleByIdUseCase;
     private UpdatePuzzleUseCase $updatePuzzleUseCase;
+    private GetAllPuzzlesUseCase $getAllPuzzlesUseCase;
 
     public function __construct(
         CreatePuzzleUseCase $createPuzzleUseCase,
         GetPuzzleByIdUseCase $getPuzzleByIdUseCase,
-        UpdatePuzzleUseCase $updatePuzzleUseCase
+        UpdatePuzzleUseCase $updatePuzzleUseCase,
+        GetAllPuzzlesUseCase $getAllPuzzlesUseCase
     ) {
         $this->createPuzzleUseCase = $createPuzzleUseCase;
         $this->getPuzzleByIdUseCase = $getPuzzleByIdUseCase;
         $this->updatePuzzleUseCase = $updatePuzzleUseCase;
+        $this->getAllPuzzlesUseCase = $getAllPuzzlesUseCase;
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/puzzles",
+     *     tags={"Puzzles"},
+     *     summary="Get all puzzles",
+     *     description="Retrieves all puzzles.",
+     *     @OA\Response(
+     *         response=200,
+     *         description="List of puzzles",
+     *         @OA\JsonContent(type="array", @OA\Items(ref="#/components/schemas/Puzzle"))
+     *     ),
+     * )
+     */
+    public function getAllPuzzles() {
+        $puzzles = $this->getAllPuzzlesUseCase->execute();
+        if (!$puzzles) {
+            return $this->errorResponse(2911);
+        }
+        return $this->successResponse($puzzles, 2910);
     }
 
     /**
